--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,20 @@
 # The main config file for your Jekyll template
 
 # Site settings
-title: Jackal               # used for the html title of every page
+title: Eric Wang               # used for the html title of every page
 desc: >
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Studying Computer Science, Class of 2019.
 
-url: http://jackal.com      # put your website hosting url here
+url: http://ericwang.me     # put your website hosting url here
 baseurl: ''                 # the subpath of your site, e.g. /blog
 permalink: /:year/:title/   # how should we display posts url
 
 # Meta settings
-email: jackal@gmail.com
-author: The Jackal
-twitter_username: clenemt
-github_username: clenemt
-github_source: jackal
+email: ew366@cornell.edu
+author: Eric Wang
+#twitter_username: clenemt
+github_username: derrig
+github_source: derrig.github.io
 
 # Put your ga tracking code below
 google_analytics: 'UA-XXXXXXXX-X'
@@ -34,13 +32,12 @@ navigation:
     desc: Stuffs I write about
   - title: Projects
     url: /projects/
-    desc: Stuffs I like to do
+    desc: Stuff I've created
   - title: Work
     url: /work/
-    desc: Stuffs I hate to do
+    desc: Turn back, there's nothing here.
   - title: About
     url: /about/
-    desc: Learn about me
 
 # Used by Jekyll to recognize what is a post and what is a page
 defaults:
@@ -66,4 +63,3 @@ exclude:
   - vendor
 gems:
   - jekyll-paginate
-
